--- a/source/contact.html
+++ b/source/contact.html
@@ -5,7 +5,7 @@
 		<div class="col-lg-6 text-left">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h4>For applying POSTECH computer vision lab</h4>
+					<h4>To apply POSTECH computer vision lab</h4>
 					1) Please send your CV to me via email<br>
 					2) Apply <a href="http://admission.postech.ac.kr/" target="_blank"> POSTECH graduate school</a><br>
 					3) Once approved, schedule an online/offline meeting with me</a>
@@ -15,7 +15,7 @@
 		<div class="col-lg-6 text-left">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h4>For scheduling an online/offline meeting</h4>
+					<h4>To schedule an online/offline meeting</h4>
 					1) Please check out <a href="https://calendar.google.com/calendar/embed?src=syncle%40gmail.com&ctz=Asia%2FSeoul" target="_blank">my calendar</a><br>
 					2) Find any available time<br>
 					3) Send an email or a calendar invitation with the available time
