--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
 			<div class="col-lg-12 text-left">
 					<h1 class="name"><br></h1>
 			<div class="col-lg-3">
-					<img src="source/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
+					<img src="source/images/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
 			</div>
 			<div class="col-lg-9">
 				<h1>Jaesik Park</h1>
