--- a/about_me.html
+++ b/about_me.html
@@ -53,10 +53,13 @@
 					<a href="http://jaesik.info/about_me.html">About me</a>
 				</li>
 				<li >
+					<a href="http://jaesik.info/academic_activities.html">Academic activities</a>
+				</li>
+				<li >
 					<a href="http://jaesik.info/publications.html">Publications</a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/academic_activities.html">Academic activities</a>
+					<a href="http://jaesik.info/lab.html">@POSTECH</a>
 				</li>
 				<li >
 					<a href="http://jaesik.info/contact.html">Contact</a>
