--- a/academic_activities.html
+++ b/academic_activities.html
@@ -52,11 +52,14 @@
 				<li >
 					<a href="http://jaesik.info/about_me.html">About me</a>
 				</li>
+				<li class="active">
+					<a href="http://jaesik.info/academic_activities.html">Academic activities</a>
+				</li>
 				<li >
 					<a href="http://jaesik.info/publications.html">Publications</a>
 				</li>
-				<li class="active">
-					<a href="http://jaesik.info/academic_activities.html">Academic activities</a>
+				<li >
+					<a href="http://jaesik.info/lab.html">@POSTECH</a>
 				</li>
 				<li >
 					<a href="http://jaesik.info/contact.html">Contact</a>
