--- a/index.html
+++ b/index.html
@@ -53,10 +53,13 @@
 					<a href="http://jaesik.info/about_me.html">About me</a>
 				</li>
 				<li >
+					<a href="http://jaesik.info/academic_activities.html">Academic activities</a>
+				</li>
+				<li >
 					<a href="http://jaesik.info/publications.html">Publications</a>
 				</li>
 				<li >
-					<a href="http://jaesik.info/academic_activities.html">Academic activities</a>
+					<a href="http://jaesik.info/lab.html">@POSTECH</a>
 				</li>
 				<li >
 					<a href="http://jaesik.info/contact.html">Contact</a>
@@ -76,7 +79,7 @@
 			<div class="col-lg-12 text-left">
 					<h1 class="name"><br></h1>
 			<div class="col-lg-3">
-					<img src="source/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
+					<img src="source/images/jaesik-park.jpg" class="img-responsive img-circle img-thumbnail">
 			</div>
 			<div class="col-lg-9">
 				<h1>Jaesik Park</h1>
