--- a/lab.html
+++ b/lab.html
@@ -58,10 +58,10 @@
 				<li >
 					<a href="http://jaesik.info/publications.html">Publications</a>
 				</li>
-				<li >
+				<li class="active">
 					<a href="http://jaesik.info/lab.html">@POSTECH</a>
 				</li>
-				<li class="active">
+				<li >
 					<a href="http://jaesik.info/contact.html">Contact</a>
 				</li>
 			</ul>
@@ -78,7 +78,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="intro-text">
-					<h1>Contact</h1>
+					<h1>@POSTECH</h1>
 				</div>
 			</div>
 		</div>
@@ -89,46 +89,34 @@
 <!-- Source -->
 <div class="container">
 	<div class="col-lg-12 text-left">
-		<h3 class="name"> <span class="glyphicon glyphicon-tree-deciduous"></span> How to contact</h3>
-		<div class="col-lg-6 text-left">
-			<ul class="list-group">
-				<li class="list-group-item">
-					<h4>To apply POSTECH computer vision lab</h4>
-					1) Please send your CV to me via email<br>
-					2) Apply <a href="http://admission.postech.ac.kr/" target="_blank"> POSTECH graduate school</a><br>
-					3) Once approved, schedule an online/offline meeting with me</a>
-				</li>
-			</ul>
-		</div>
-		<div class="col-lg-6 text-left">
-			<ul class="list-group">
-				<li class="list-group-item">
-					<h4>To schedule an online/offline meeting</h4>
-					1) Please check out <a href="https://calendar.google.com/calendar/embed?src=syncle%40gmail.com&ctz=Asia%2FSeoul" target="_blank">my calendar</a><br>
-					2) Find any available time<br>
-					3) Send an email or a calendar invitation with the available time
-				</li>
-			</ul>
-		</div>
-		<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
+		<h3 class="name"> <span class="glyphicon glyphicon-blackboard"></span> Teaching</h3>
 		<div class="col-lg-12 text-left">
 			<ul class="list-group">
 				<li class="list-group-item">
-					[my_first_name] [dot] [my_last_name] [at] postech.ac.kr
+					<h4>CSED703F-01: 3D Vision (인공지능특론: 3차원비전), 2019 Fall</h4>
 				</li>
 			</ul>
 		</div>
-		<h3 class="name"> <span class="glyphicon glyphicon-map-marker"></span> Office</h3>
-		<div class="col-lg-12 text-left">
-			<ul class="list-group">
-				<li class="list-group-item">
-					Room 317, Chungam-Ro 77, Science Building Ⅱ, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br>
-					(in Korean) 대한민국 경상북도 포항시 남구 청암로 77 포항공과대학교 제 2공학관 317호 (우: 37673)<br>
-				</li>
-				<li class="list-group-item">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1613.6586229797967!2d129.32099752385267!3d36.01254565132359!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x356701d5bd6bfb23%3A0x471a066a5e57ed04!2zUG9oYW5nLCBIeW9qYS1kb25nLCDtj6ztla3qs7Xqs7zrjIDtlZnqtZAg7KCcMuqzte2Vmeq0gA!5e0!3m2!1sen!2skr!4v1566448360900!5m2!1sen!2skr" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-				</li>
-			</ul>
+		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Students</h3>
+		<div class="col-xs-12 text-center">
+			<div class="col-xs-3">
+				<img src="source/images/junha.jpg" class="img-responsive img-circle img-thumbnail">
+				<h4>Junha Lee</h4>
+				2019 Fall<br>
+				Master's course<br>
+			</div>
+			<div class="col-xs-3">
+				<img src="source/images/hyunmin.jpg" class="img-responsive img-circle img-thumbnail">
+				<h4>Hyunmin Lee</h4>
+				2019 Fall<br>
+				Master's course<br>
+			</div>
+			<div class="col-xs-3">
+				<img src="source/images/jaebong.jpg" class="img-responsive img-circle img-thumbnail">
+				<h4>Jaebong Jung</h4>
+				2019 Fall<br>
+				Master's course<br>
+			</div>
 		</div>
 	</div>
 </div>
