--- a/publications.html
+++ b/publications.html
@@ -361,8 +361,8 @@
 		<p>Seong heum Kim, Yu Wing Tai, Joon Young Lee, Jaesik Park, and In So Kweon<br>
 		Computer Graphics Forum (<b>CGF</b>), 2017<br>
 		</p>
-		<a href="http://rcv.kaist.ac.kr/v2/bbs/board.php?bo_table=rs_publications&wr_id=547" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-home"></span> Project Page
+		<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.13082" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
 </div>
