--- a/publications.html
+++ b/publications.html
@@ -139,6 +139,9 @@
 		<p>Jungeon Kim, Hyomin Kim, Jaesik Park, and Seungyong Lee<br>
 		Pacific Graphics (<b>PG</b>), 2019<br>
 		</p>
+		<a href="http://cg.postech.ac.kr/papers/2019_PG_Kim.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
