--- a/academic_activities.html
+++ b/academic_activities.html
@@ -106,6 +106,7 @@
 				IEEE Computer Vision and Pattern Recognition (CVPR)<br>
 				International Conference on Computer Vision (ICCV)<br>
 				The European Conference on Computer Vision (ECCV)<br>
+				Association for the Advancement of Artificial Intelligence (AAAI)<br>
 				International Conference on Robotics and Automation (ICRA)<br>
 				International Conference on Intelligent Robots and Systems (IROS)<br>
 				British Machine Vision Conference (BMVC)<br>
