--- a/contact.html
+++ b/contact.html
@@ -88,40 +88,42 @@
 
 <!-- Source -->
 <div class="container">
+	<br>
 	<div class="col-lg-12 text-left">
-		<h3 class="name"> <span class="glyphicon glyphicon-tree-deciduous"></span> How to contact</h3>
-		<div class="col-lg-6 text-left">
+		<div class="col-lg-4 text-left">
 			<ul class="list-group">
 				<li class="list-group-item">
-					<h4>To apply POSTECH computer vision lab</h4>
-					1) Please send your CV to me via email<br>
-					2) Apply <a href="http://admission.postech.ac.kr/" target="_blank"> POSTECH graduate school</a><br>
-					3) Once approved, schedule an online/offline meeting with me</a>
-				</li>
-			</ul>
-		</div>
-		<div class="col-lg-6 text-left">
-			<ul class="list-group">
-				<li class="list-group-item">
-					<h4>To schedule an online/offline meeting</h4>
-					1) Please check out <a href="https://calendar.google.com/calendar/embed?src=syncle%40gmail.com&ctz=Asia%2FSeoul" target="_blank">my calendar</a><br>
-					2) Find any available time<br>
-					3) Send an email or a calendar invitation with the available time
-				</li>
-			</ul>
-		</div>
-		<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
-		<div class="col-lg-12 text-left">
-			<ul class="list-group">
-				<li class="list-group-item">
+					<h3 class="name"> <span class="glyphicon glyphicon-envelope"></span> Email</h3>
 					[my_first_name] [dot] [my_last_name] [at] postech.ac.kr
 				</li>
 			</ul>
 		</div>
-		<h3 class="name"> <span class="glyphicon glyphicon-map-marker"></span> Office</h3>
+		<div class="col-lg-4 text-left">
+			<ul class="list-group">
+				<li class="list-group-item">
+					<h3 class="name"> <span class="glyphicon glyphicon-user"></span> To schedule a meeting</h3>
+					<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+					<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+					<a href="" class="btn btn-default" role="button" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jaesik-park'});return false;">
+					Launch scheduler</a>
+					<!-- Calendly link widget end -->
+				</li>
+			</ul>
+		</div>
+		<div class="col-lg-4 text-left">
+			<ul class="list-group">
+				<li class="list-group-item">
+					<h3 class="name"> <span class="glyphicon glyphicon-education"></span> To apply lab</h3>
+					1) Please send your CV to me via email<br>
+					2) Apply <a href="http://admission.postech.ac.kr/" target="_blank"> POSTECH graduate school</a><br>
+					3) Once approved, schedule an online/offline meeting with me.</a>
+				</li>
+			</ul>
+		</div>
 		<div class="col-lg-12 text-left">
 			<ul class="list-group">
 				<li class="list-group-item">
+					<h3 class="name"> <span class="glyphicon glyphicon-map-marker"></span> Office</h3>
 					Room 317, Chungam-Ro 77, Science Building Ⅱ, POSTECH, Pohang-Si, Republic of Korea (Zip: 37673)<br>
 					(in Korean) 대한민국 경상북도 포항시 남구 청암로 77 포항공과대학교 제 2공학관 317호 (우: 37673)<br>
 				</li>
