remove Calendly button

--- a/source/contact.html
+++ b/source/contact.html
@@ -14,11 +14,7 @@
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3 class="name"> <span class="glyphicon glyphicon-user"></span> To schedule a meeting</h3>
-					<link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
-					<script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
-					<a href="" class="btn btn-default" role="button" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/jaesik-park'});return false;">
-					Launch scheduler</a>
-					<!-- Calendly link widget end -->
+					Please send me an email.
 				</li>
 			</ul>
 		</div>
