--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,9 @@
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3 class="name"> <span class="glyphicon glyphicon-user"></span> To schedule a meeting</h3>
-					Please send me an email.
+                    1) Please send me an email.<br>
+                    2) If the request is valid, I will provide a link that shows the available meeting slots.<br>
+                    3) Select the best niche and confirm it.<br>
 				</li>
 			</ul>
 		</div>
@@ -110,8 +112,8 @@
 			<ul class="list-group">
 				<li class="list-group-item">
 					<h3 class="name"> <span class="glyphicon glyphicon-education"></span> To apply lab</h3>
-					1) Please send your CV to me via email<br>
-					2) Apply <a href="http://admission.postech.ac.kr/" target="_blank"> POSTECH graduate school</a><br>
+					1) Please send your CV to me via email.<br>
+					2) Apply <a href="http://admission.postech.ac.kr/" target="_blank"> POSTECH graduate school</a>.<br>
 					3) Once approved, schedule an online/offline meeting with me.</a>
 				</li>
 			</ul>
