--- a/lab.html
+++ b/lab.html
@@ -89,35 +89,60 @@
 <!-- Source -->
 <div class="container">
 	<div class="col-lg-12 text-left">
-		<h3 class="name"> <span class="glyphicon glyphicon-blackboard"></span> Teaching</h3>
-		<div class="col-lg-12 text-left">
-			<ul class="list-group">
-				<li class="list-group-item">
-					<h4>CSED703F-01: 3D Vision (인공지능특론: 3차원비전), 2019 Fall</h4>
-				</li>
-			</ul>
-		</div>
 		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Students</h3>
-		<div class="col-xs-12 text-center">
-			<div class="col-xs-3">
-				<img src="source/images/junha.jpg" class="img-responsive img-circle img-thumbnail">
-				<h4>Junha Lee</h4>
-				2019 Fall<br>
-				Master's course<br>
-			</div>
-			<div class="col-xs-3">
-				<img src="source/images/hyunmin.jpg" class="img-responsive img-circle img-thumbnail">
-				<h4>Hyunmin Lee</h4>
-				2019 Fall<br>
-				Master's course<br>
-			</div>
-			<div class="col-xs-3">
-				<img src="source/images/jaebong.jpg" class="img-responsive img-circle img-thumbnail">
-				<h4>Jaebong Jung</h4>
-				2019 Fall<br>
-				Master's course<br>
-			</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/junha.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Junha Lee</h4>
+			2019 Fall<br>
+			Master's course<br><br>
 		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/hyunmin.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Hyunmin Lee</h4>
+			2019 Fall<br>
+			Master's course<br><br>
+		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/jaebong.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Jaebong Jeong</h4>
+			2019 Fall<br>
+			Master's course<br><br>
+		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/minguk.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>MinGuk Kang</h4>
+			2020 Spring<br>
+			Master's course<br><br>
+		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/chunghyun.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Chunghyun Park</h4>
+			2020 Spring<br>
+			Master's course<br><br>
+		</div>
+	</div>
+</div>
+<div class="container">
+	<div class="col-lg-6 text-left">
+		<h3 class="name"> <span class="glyphicon glyphicon-blackboard"></span> Teaching</h3>
+		<ul class="list-group">
+			<li class="list-group-item">
+				<h3>2020 Spring</h3>
+				<h4>AIGS101: Artifical Intelligence Basis I (인공지능 기초 I)</h4>
+				<h4>CSED233: Data Structure (데이터구조)</h4>
+				<h4>CSED800A: Computer Science Colloquium A (컴퓨터공학세미나A)</h4>
+				<h3>2019 Fall</h3>
+				<h4>CSED703F-01: 3D Vision (인공지능특론: 3차원비전)</h4>
+			</li>
+		</ul>
+	</div>
+	<div class="col-lg-6 text-left">
+		<h3 class="name"> <span class="glyphicon glyphicon-piggy-bank"></span> Funding</h3>
+		<ul class="list-group">
+			<li class="list-group-item">
+				<h4>2019. Oct., Gift funds from Qualcomm Corp. USA</h4>
+			</li>
+		</ul>
 	</div>
 </div>
 <!-- Footer -->
