--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				<div class="row">
 						<div class="col-lg-12">
 								<p><br></p>
-								<p class="copyright text-center">Copyright &copy; jaesik.info 2017-2019.</p>
+								<p class="copyright text-center">Copyright &copy; jaesik.info 2017-2020</p>
 								<p><br></p>
 						</div>
 				</div>
