--- a/lab.html
+++ b/lab.html
@@ -128,11 +128,13 @@
 		<ul class="list-group">
 			<li class="list-group-item">
 				<h3>2020 Spring</h3>
-				<h4>AIGS101: Artifical Intelligence Basis I (인공지능 기초 I)</h4>
-				<h4>CSED233: Data Structure (데이터구조)</h4>
-				<h4>CSED800A: Computer Science Colloquium A (컴퓨터공학세미나A)</h4>
+				<h4>[CSED233] Data Structure (데이터구조)</h4>
+				<h4>[AIGS101]* Artifical Intelligence Basis I (인공지능 기초 I)</h4>
+				<h4>[CSED800A]** Computer Science Colloquium A (컴퓨터공학세미나A)</h4>
+				<h4>[AIGS800A]** Artificial Intelligence Colloquium A (인공지능세미나A)</h4>
+				*Colloquium lecture, **Joint course
 				<h3>2019 Fall</h3>
-				<h4>CSED703F-01: 3D Vision (인공지능특론: 3차원비전)</h4>
+				<h4>[CSED703F-01] 3D Vision (인공지능특론: 3차원비전)</h4>
 			</li>
 		</ul>
 	</div>
@@ -140,7 +142,8 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-piggy-bank"></span> Funding</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
-				<h4>2019. Oct., Gift funds from Qualcomm Corp. USA</h4>
+				<h4>2019. Oct., Gift funds from Qualcomm Corp., USA</h4>
+				<h4>2019. April., Gift funds from POSTECH, Republic of Korea</h4>
 			</li>
 		</ul>
 	</div>
