--- a/lab.html
+++ b/lab.html
@@ -132,7 +132,7 @@
 				<h4>[AIGS101]* Artifical Intelligence Basis I (인공지능 기초 I)</h4>
 				<h4>[CSED800A]** Computer Science Colloquium A (컴퓨터공학세미나A)</h4>
 				<h4>[AIGS800A]** Artificial Intelligence Colloquium A (인공지능세미나A)</h4>
-				*Colloquium lecture, **Joint course
+				*Participating part of the lecture series, **Organizing a joint course
 				<h3>2019 Fall</h3>
 				<h4>[CSED703F-01] 3D Vision (인공지능특론: 3차원비전)</h4>
 			</li>
