--- a/lab.html
+++ b/lab.html
@@ -128,13 +128,13 @@
 		<ul class="list-group">
 			<li class="list-group-item">
 				<h3>2020 Spring</h3>
-				<h4>[CSED233] Data Structure (데이터구조)</h4>
-				<h4>[CSED800A]* Computer Science Colloquium A (컴퓨터공학세미나A)</h4>
-				<h4>[AIGS800A]* Artificial Intelligence Colloquium A (인공지능세미나A)</h4>
-				<h4>[AIGS101]** Artifical Intelligence Basis I (인공지능 기초 I)</h4>
+				<h4>[CSED233] Data Structure</h4>
+				<h4>[CSED800A]* Computer Science Colloquium A</h4>
+				<h4>[AIGS800A]* Artificial Intelligence Colloquium A</h4>
+				<h4>[AIGS101]** Artifical Intelligence Basis I</h4>
 				*A joint course, **Participating part of the lecture series
 				<h3>2019 Fall</h3>
-				<h4>[CSED703F-01] 3D Vision (인공지능특론: 3차원비전)</h4>
+				<h4>[CSED703F-01] 3D Vision</h4>
 			</li>
 		</ul>
 	</div>
