--- a/source/academic_activities.html
+++ b/source/academic_activities.html
@@ -33,9 +33,9 @@
 				Transactions on Pattern Analysis and Machine Intelligence (TPAMI), IEEE<br>
 				Transactions on Image Processing (TIP), IEEE<br>
 				Transactions on Visualization and Computer Graphics (TVCG), IEEE<br>
+				Transactions on Robotics, IEEE<br>
 				Signal Processing Letters, IEEE<br>
 				International Journal of Computer Vision (IJCV), Springer<br>
-				IEEE Transactions on Robotics<br>
 				Journal of Mathematical Imaging and Vision, Springer<br>
 				Computer Vision and Image Understanding (CVIU), Elsevier<br>
 				Image and Vision Computing, Elsevier<br>
