--- a/academic_activities.html
+++ b/academic_activities.html
@@ -107,6 +107,7 @@
 				International Conference on Computer Vision (ICCV)<br>
 				The European Conference on Computer Vision (ECCV)<br>
 				Association for the Advancement of Artificial Intelligence (AAAI)<br>
+				International Joint Conference on Artificial Intelligence and the Pacific Rim International Conference on Artificial Intelligence (IJCAI-PRICAI)<br>
 				International Conference on Robotics and Automation (ICRA)<br>
 				International Conference on Intelligent Robots and Systems (IROS)<br>
 				British Machine Vision Conference (BMVC)<br>
