--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						2019.09. We are releasing source of FCGF via <a href="https://github.com/chrischoy/fcgf">Github</a>.
+						2019.09. We are releasing source code of FCGF via <a href="https://github.com/chrischoy/fcgf">Github</a>.
 					</li>
 					<li class="list-group-item">
 						2019.08. I will serve as an Session Chair for <b>ICCV 2019</b>.
