minor fix in index page

--- a/index.html
+++ b/index.html
@@ -83,9 +83,12 @@
 			</div>
 			<div class="col-lg-9">
 				<h1>Jaesik Park</h1>
-				<p class="lead">Hello! I am an Assistant Professor at POSTECH. I am looking for self-motivated students to escalate <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together. Please <a href="http://jaesik.info/contact.html">contact me</a> if interested.</p>
+				<p class="lead">Hello! I am an Assistant Professor at POSTECH. I am looking for self-motivated students to make <a href="http://cvlab.postech.ac.kr" target="_blank">POSTECH computer vision lab</a> together. Please <a href="http://jaesik.info/contact.html">contact me</a> if interested.</p>
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
+					<li class="list-group-item">
+						2020.02. I will visit San Diego to attend CVPR 2020 AC meeting.
+					</li>
 					<li class="list-group-item">
 						2019.09. We are releasing source code of FCGF via <a href="https://github.com/chrischoy/fcgf">Github</a>.
 					</li>
@@ -101,9 +104,6 @@
 					<li class="list-group-item">
 						2019.07. One paper on high-quality texture mapping for dynamic objects is conditionally accepted to Pacific Graphics 2019.
 					</li>
-					<li class="list-group-item">
-						2019.06. One paper about fast indoor scene reconstruction is accepted to IROS 2019.
-					</li>
 					<div id="accordion">
 						<div class="card">
 							<div class="card-header" id="heading-previous-news">
@@ -115,6 +115,9 @@
 								</h5>
 							</div>
 							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2019.06. One paper about fast indoor scene reconstruction is accepted to IROS 2019.
+								</li>
 								<li class="list-group-item">
 									2019.05. Open3D is being supported by <a href="https://developers.google.com/season-of-docs/docs/participants/" target="_blank">Google Season of Docs</a>.
 								</li>
