--- a/source/about_me.html
+++ b/source/about_me.html
@@ -10,6 +10,7 @@
 			</li>
 			<li class="list-group-item">
 				<h4>Staff Research Scientist - Intel Labs</h4>
+				Manager: <a href="https://vladlen.info" target="_blank">Dr. Vladlen Koltun</a><br>
 				<span class="glyphicon glyphicon-map-marker"></span> Santa Clara, California, USA<br>
 				<span class="glyphicon glyphicon-calendar"></span> Dec. 2015 - March 2019
 			</li>
