--- a/about_me.html
+++ b/about_me.html
@@ -98,6 +98,7 @@
 			</li>
 			<li class="list-group-item">
 				<h4>Staff Research Scientist - Intel Labs</h4>
+				Manager: <a href="https://vladlen.info" target="_blank">Dr. Vladlen Koltun</a><br>
 				<span class="glyphicon glyphicon-map-marker"></span> Santa Clara, California, USA<br>
 				<span class="glyphicon glyphicon-calendar"></span> Dec. 2015 - March 2019
 			</li>
@@ -151,7 +152,7 @@
 				<div class="row">
 						<div class="col-lg-12">
 								<p><br></p>
-								<p class="copyright text-center">Copyright &copy; jaesik.info 2017-2020</p>
+								<p class="copyright text-center">&copy; Jaesik Park 2017-2020</p>
 								<p><br></p>
 						</div>
 				</div>
