--- a/source/footer.html
+++ b/source/footer.html
@@ -4,7 +4,7 @@
 				<div class="row">
 						<div class="col-lg-12">
 								<p><br></p>
-								<p class="copyright text-center">Copyright &copy; jaesik.info 2017-2020</p>
+								<p class="copyright text-center">&copy; Jaesik Park 2017-2020</p>
 								<p><br></p>
 						</div>
 				</div>
