--- a/source/lab.html
+++ b/source/lab.html
@@ -54,8 +54,9 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-piggy-bank"></span> Funding</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
-				<h4>2019. Oct., Gift funds from Qualcomm Corp., USA</h4>
-				<h4>2019. April, Gift funds from POSTECH, Republic of Korea</h4>
+				<h4>2020.03-2023.03, Ministry of Science and ICT, Republic of Korea</h4>
+				<h4>2019.10-2020.10, Gift funds from Qualcomm Corp., USA</h4>
+				<h4>2019.04-2022.04, Gift funds from POSTECH, Republic of Korea</h4>
 			</li>
 		</ul>
 	</div>
