--- a/publications.html
+++ b/publications.html
@@ -103,6 +103,63 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-12 text-left">
+		<h2 class="name">2020</h2>
+	</div>
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/18_arxiv2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>HUMBI: A Large Multiview Dataset of Human Body Expressions</h3>
+		<p>Zhixuan Yu, Hyunsoo Park, Jaeshin Yoon, Prashanth Venkatesh, Inkyu Lee, Jaesik Park, Jihun Yu<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/20_cvpr2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>High-Dimensional Convolutional Networks for Geometric Pattern Recognition</h3>
+		<p>Christopher Choy, Junha Lee, Rene Ranftl, Jaesik Park, Vladlen Koltun<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/20_cvpr1.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Future Video Synthesis with Object Motion Predictions</h3>
+		<p>Yue Wu, Rongrong Gao, Jaesik Park, Qifeng Chen<br>
+		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
+		</p>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<hr>
+<div class="container">
+<div class="row">
+	<div class="col-lg-12 text-left">
 		<h2 class="name">2019</h2>
 	</div>
 </div>
@@ -193,25 +250,6 @@
 	<div class="col-lg-12 text-left">
 		<h2 class="name">2018</h2>
 	</div>
-</div>
-</div>
-
-<div class="container">
-<div class="row">
-	<div class="col-lg-4 col-lg-offset-1">
-		<img src="publications/data/18_arxiv2.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
-	</div>
-	<div class="col-lg-7">
-		<h3>HUMBI 1.0: HUman Multiview Behavioral Imaging Dataset</h3>
-		<p>Zhixuan Yu, Jae Shin Yoon, Prashanth Venkatesh, Jaesik Park, Jihun Yu, and Hyun Soo Park<br>
-		Technical Report, arXiv:1812.00281, 2018<br>
-		</p>
-		<a href="https://arxiv.org/abs/1812.00281" target="_blank" class="btn btn-default" role="button">
-			<span class="glyphicon glyphicon-file"></span> Paper
-		</a>
-	</div>
-</div>
-<div class="row" style="height: 30px">
 </div>
 </div>
 
