--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						2020.03. Three papers got accepted to <b>CVPR 2020</b>.
+					</li>
+					<li class="list-group-item">
 						2020.02. I will visit San Diego to attend CVPR 2020 AC meeting.
 					</li>
 					<li class="list-group-item">
@@ -101,9 +104,6 @@
 					<li class="list-group-item">
 						2019.07. One paper regarding geometric feature learning is accepted to <b>ICCV 2019</b>.
 					</li>
-					<li class="list-group-item">
-						2019.07. One paper on high-quality texture mapping for dynamic objects is conditionally accepted to Pacific Graphics 2019.
-					</li>
 					<div id="accordion">
 						<div class="card">
 							<div class="card-header" id="heading-previous-news">
@@ -115,6 +115,9 @@
 								</h5>
 							</div>
 							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2019.07. One paper on high-quality texture mapping for dynamic objects is conditionally accepted to Pacific Graphics 2019.
+								</li>
 								<li class="list-group-item">
 									2019.06. One paper about fast indoor scene reconstruction is accepted to IROS 2019.
 								</li>
@@ -180,7 +183,7 @@
 				<div class="row">
 						<div class="col-lg-12">
 								<p><br></p>
-								<p class="copyright text-center">Copyright &copy; jaesik.info 2017-2020</p>
+								<p class="copyright text-center">&copy; Jaesik Park 2017-2020</p>
 								<p><br></p>
 						</div>
 				</div>
