--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>HUMBI: A Large Multiview Dataset of Human Body Expressions</h3>
-		<p>Zhixuan Yu, Hyunsoo Park, Jaeshin Yoon, Prashanth Venkatesh, Inkyu Lee, Jaesik Park, Jihun Yu<br>
+		<p>Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, Jaesik Park, Jihun Yu, Hyunsoo Park<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
 	</div>
