--- a/source/lab.html
+++ b/source/lab.html
@@ -1,5 +1,19 @@
 <!-- Source -->
 <div class="container">
+	<div class="col-sm-6">
+		<h3 class="name"> <span class="glyphicon glyphicon-flag"></span> About University</h3>
+		<a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a><br>
+		<h4 class="name"> Ranked <mark>third best small university in the world, first in Asia</mark></h4>
+		- By the Times Higher Education (THE), 2019<br>
+		<h4 class="name">Ranked <mark>No. 1 in Asia among world’s most innovative universities</mark></h4>
+		- By international news agency Reuters, 2019
+	</div>
+	<div class="col-sm-6">
+		<h3 class="name"> <span class="glyphicon glyphicon-home"></span> Computer Vision Lab.</h3>
+		<img src="source/images/lab.jpg" class="img-responsive img-thumbnail">
+	</div>
+</div>
+<div class="container">
 	<div class="col-lg-12 text-left">
 		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Students</h3>
 		<div class="col-xs-3 text-center">
@@ -44,6 +58,7 @@
 				<h4>[CSED800A]* Computer Science Colloquium A</h4>
 				<h4>[AIGS800A]* Artificial Intelligence Colloquium A</h4>
 				<h4>[AIGS101]** Artifical Intelligence Basis I</h4>
+				<h4>[AIGS537/CSED537]** Artificial Intelligence & Data Science</h4>
 				*A joint course, **Participating part of the lecture series
 				<h3>2019 Fall</h3>
 				<h4>[CSED703F-01] 3D Vision</h4>
@@ -54,9 +69,19 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-piggy-bank"></span> Funding</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
+				<h4>2020.06-2020.03, Gift funds from Microsoft Reserach Asia</h4>
+				- Research on content creation<br>
+				<h4>2020.04-current, Gift funds from Intel Corp., USA</h4>
+				- Research collaboration with Intel ISL<br>
+				- Contribution to Open3D<br>
+				<h4>2020.03-2020.10, ETRI, Republic of Korea</h4>
+				- Developing 3D human capturing system<br>
 				<h4>2020.03-2023.03, Ministry of Science and ICT, Republic of Korea</h4>
+				- 과학기술정보통신부 신진연구자 지원사업<br>
 				<h4>2019.10-2020.10, Gift funds from Qualcomm Corp., USA</h4>
+				- Research on latent feature refinement<br>
 				<h4>2019.04-2022.04, Gift funds from POSTECH, Republic of Korea</h4>
+				- 포항공과대학교 신임교수 초기정착비<br>
 			</li>
 		</ul>
 	</div>
