applying root folder

--- a/academic_activities.html
+++ b/academic_activities.html
@@ -92,48 +92,48 @@
 		<h2> <span class="glyphicon glyphicon-globe"></span>  Program Committee</h2>
 		<ul class="list-group">
 			<li class="list-group-item">
-				Area Chair, Int. Conf. on Computer Vision and Pattern Recognition (CVPR), 2020<br>
-				Session Chair, Int. Conf. on Computer Vision (ICCV), 2019<br>
-				Area Chair, Int. Conf. on Computer Vision (ICCV), 2019
+				<mark>Area Chair</mark>, Int. Conf. on Computer Vision and Pattern Recognition (CVPR), 2020<br>
+				<mark>Session Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2019<br>
+				<mark>Area Chair</mark>, Int. Conf. on Computer Vision (ICCV), 2019
 			</li>
 		</ul>
 		<h2> <span class="glyphicon glyphicon-sunglasses"></span>  Reviewer</h2>
 		<ul class="list-group">
 			<li class="list-group-item">
 				<h3>International Conference</h3>
-				ACM SIGGRAPH<br>
-				ACM SIGGRAPH ASIA<br>
-				IEEE Computer Vision and Pattern Recognition (CVPR)<br>
-				International Conference on Computer Vision (ICCV)<br>
-				The European Conference on Computer Vision (ECCV)<br>
-				Association for the Advancement of Artificial Intelligence (AAAI)<br>
-				International Joint Conference on Artificial Intelligence and the Pacific Rim International Conference on Artificial Intelligence (IJCAI-PRICAI)<br>
-				International Conference on Robotics and Automation (ICRA)<br>
-				International Conference on Intelligent Robots and Systems (IROS)<br>
-				British Machine Vision Conference (BMVC)<br>
-				International Conference on 3D Vision (3DV)<br>
-				Asian Conference on Computer Vision (ACCV)<br>
-				IEEE Winter Conference on Applications of Computer Vision (WACV)<br>
-				IEEE International Conference on Image Processing (ICIP)<br>
-				IAPR International conference on pattern recognition (ICPR)<br>
+				- ACM SIGGRAPH<br>
+				- ACM SIGGRAPH ASIA<br>
+				- IEEE Computer Vision and Pattern Recognition (CVPR)<br>
+				- International Conference on Computer Vision (ICCV)<br>
+				- The European Conference on Computer Vision (ECCV)<br>
+				- Association for the Advancement of Artificial Intelligence (AAAI)<br>
+				- International Joint Conference on Artificial Intelligence and the Pacific Rim International Conference on Artificial Intelligence (IJCAI-PRICAI)<br>
+				- International Conference on Robotics and Automation (ICRA)<br>
+				- International Conference on Intelligent Robots and Systems (IROS)<br>
+				- British Machine Vision Conference (BMVC)<br>
+				- International Conference on 3D Vision (3DV)<br>
+				- Asian Conference on Computer Vision (ACCV)<br>
+				- IEEE Winter Conference on Applications of Computer Vision (WACV)<br>
+				- IEEE International Conference on Image Processing (ICIP)<br>
+				- IAPR International conference on pattern recognition (ICPR)<br>
 			</li>
 			<li class="list-group-item">
 				<h3>International Journal</h3>
-				Transactions on Pattern Analysis and Machine Intelligence (TPAMI), IEEE<br>
-				Transactions on Image Processing (TIP), IEEE<br>
-				Transactions on Visualization and Computer Graphics (TVCG), IEEE<br>
-				Transactions on Robotics, IEEE<br>
-				Signal Processing Letters, IEEE<br>
-				International Journal of Computer Vision (IJCV), Springer<br>
-				Journal of Mathematical Imaging and Vision, Springer<br>
-				Computer Vision and Image Understanding (CVIU), Elsevier<br>
-				Image and Vision Computing, Elsevier<br>
-				Journal of Visual Communication and Image Representation, Elsevier<br>
-				Neurocomputing, Elsevier<br>
-				Computer and Graphics, Elsevier<br>
-				Journal on Image and Video Processing, EURASIP Journal<br>
-				IPSJ Transactions on Computer Vision and Applications<br>
-				Sensors, MDPI Open access journal<br>
+				- Transactions on Pattern Analysis and Machine Intelligence (TPAMI), IEEE<br>
+				- Transactions on Image Processing (TIP), IEEE<br>
+				- Transactions on Visualization and Computer Graphics (TVCG), IEEE<br>
+				- Transactions on Robotics, IEEE<br>
+				- Signal Processing Letters, IEEE<br>
+				- International Journal of Computer Vision (IJCV), Springer<br>
+				- Journal of Mathematical Imaging and Vision, Springer<br>
+				- Computer Vision and Image Understanding (CVIU), Elsevier<br>
+				- Image and Vision Computing, Elsevier<br>
+				- Journal of Visual Communication and Image Representation, Elsevier<br>
+				- Neurocomputing, Elsevier<br>
+				- Computer and Graphics, Elsevier<br>
+				- Journal on Image and Video Processing, EURASIP Journal<br>
+				- IPSJ Transactions on Computer Vision and Applications<br>
+				- Sensors, MDPI Open access journal<br>
 			</li>
 		</ul>
 	</div>
@@ -141,68 +141,41 @@
 		<h2> <span class="glyphicon glyphicon-tower"></span>  Awards</h2>
 		<ul class="list-group">
 		<li class="list-group-item">
-			<h4>Google Season of Docs</h4>
+			<h4><mark>Google Season of Docs</mark></h4>
 			Technical support for Open3D, Google, April 2019.
 		</li>
 		<li class="list-group-item">
-			<h4>Research Velocity Challenge Award</h4>
-			Intel Labs, Dec. 2018.
-		</li>
-		<li class="list-group-item">
-			<h4>Depth estimation challenge: robustness champion</h4>
-			CVPR workshop on Light Fields for Computer Vision, July 2017.
-		</li>
-		<li class="list-group-item">
-			<h4>Qualcomm Innovation Award</h4>
+			<h4><mark>Qualcomm Innovation Award</mark></h4>
 			Qualcomm Korea Corp. and KAIST, March 2015 and March 2016.
 		</li>
 		<li class="list-group-item">
-			<h4>Best Paper Award</h4>
-			2015 Spring Annual Conference, Korea Multimedia Society, May 2015.
-		</li>
-		<li class="list-group-item">
-			<h4>Honor Prize</h4>
-			Annual Ph.D. Research Progress Evaluation, KAIST, May 2014 and May 2015.
-		</li>
-		<li class="list-group-item">
-			<h4>CVPR 2015 Doctoral Consortium</h4>
-			IEEE CVPR, April 2015.
-		</li>
-		<li class="list-group-item">
-			<h4>HumanTech Paper Award (Silver Prize)</h4>
+			<h4><mark>HumanTech Paper Award (Silver Prize)</mark></h4>
 			Samsung Electronics Corp., Feb. 2013 and Feb. 2014.
 		</li>
 		<li class="list-group-item">
-			<h4>Best Paper Award</h4>
-			25th Workshop on Image Processing and Image Understanding (IPIU2013), Feb. 2013.
-		</li>
-		<li class="list-group-item">
-			<h4>Excellent Intern Award</h4>
-			Microsoft Research Asia, Dec. 2012.
-		</li>
-		<li class="list-group-item">
-			<h4>Bronze Prize</h4>
-			Samsung Techwin research center conference, Feb. 2012.
-		</li>
-		<li class="list-group-item">
-			<h4>Microsoft Research Asia Fellowship</h4>
+			<h4><mark>Microsoft Research Asia Fellowship</mark></h4>
 			Microsoft Research Asia, Sep. 2011.
 		</li>
 		<li class="list-group-item">
-			<h4>Summa cum laude</h4>
+			<h4><mark>Summa Cum Laude</mark></h4>
 			Hanyang University, Feb. 2009.
 		</li>
 		<li class="list-group-item">
-			<h4>Scholarship for Special Undergraduate Students</h4>
+			<h4><mark>Scholarship for Special Undergraduate Students</mark></h4>
 			The Korea Foundation for Advanced Studies (KFAS), April 2006 - March 2009.
 		</li>
 		<li class="list-group-item">
-			<h4>Full scholarship</h4>
-			Jeongsu Scholarship Foundation, Feb. 2006 - Aug. 2008.
-		</li>
-		<li class="list-group-item">
-			<h4>Full scholarship</h4>
-			Hanyang University, Aug. 2005.
+			<h4>Others</h4>
+			- Research Velocity Challenge Award, Intel Labs, Dec. 2018.<br>
+			- Depth estimation challenge: robustness champion, CVPR workshop on Light Fields for Computer Vision, July 2017. <br>
+			- Best Paper Award, Spring Annual Conference, Korea Multimedia Society, May 2015.<br>
+			- Honor Prize, Annual Ph.D. Research Progress Evaluation, KAIST, May 2014 and May 2015.<br>
+			- CVPR 2015 Doctoral Consortium, IEEE CVPR, April 2015.<br>
+			- Best Paper Award, 25th Workshop on Image Processing and Image Understanding (IPIU2013), Feb. 2013.<br>
+			- Excellent Intern Award, Microsoft Research Asia, Dec. 2012.<br>
+			- Bronze Prize, Samsung Techwin research center conference, Feb. 2012.<br>
+			- Full scholarship, Jeongsu Scholarship Foundation, Feb. 2006 - Aug. 2008.<br>
+			- Full scholarship, Hanyang University, Aug. 2005.<br>
 		</li>
 		</ul>
 	</div>
