--- a/lab.html
+++ b/lab.html
@@ -91,6 +91,9 @@
 	<div class="col-sm-6">
 		<h3 class="name"> <span class="glyphicon glyphicon-flag"></span> About University</h3>
 		<h4 class="name"><a href="http://www.postech.ac.kr/eng/" target="_blank">POSTECH</a> is young, small, and strong university in <a href="https://en.wikipedia.org/wiki/South_Korea" target="_blank">Republic of Korea</a></h4>
+		- 3.3 to 1 Undergraduate students per faculty<br>
+		- 105% Scholarship recipient rate<br>
+		- Annual educational expenditures of USD 74,900 per student
 		<h4 class="name"> Ranked <mark>third best small university in the world, first in Asia</mark></h4>
 		- By the Times Higher Education (THE), 2019<br>
 		<h4 class="name">Ranked <mark>no. 1 in Asia among world’s most innovative universities</mark></h4>
