--- a/academic_activities.html
+++ b/academic_activities.html
@@ -149,7 +149,7 @@
 			Qualcomm Korea Corp. and KAIST, March 2015 and March 2016.
 		</li>
 		<li class="list-group-item">
-			<h4><mark>HumanTech Paper Award (Silver Prize)</mark></h4>
+			<h4><mark>Samsung HumanTech Paper Award (Silver Prize)</mark></h4>
 			Samsung Electronics Corp., Feb. 2013 and Feb. 2014.
 		</li>
 		<li class="list-group-item">
