--- a/source/lab.html
+++ b/source/lab.html
@@ -62,11 +62,9 @@
 			<li class="list-group-item">
 				<h3>2020 Spring</h3>
 				<h4>[CSED233] Data Structure</h4>
-				<h4>[CSED800A]* Computer Science Colloquium A</h4>
-				<h4>[AIGS800A]* Artificial Intelligence Colloquium A</h4>
-				<h4>[AIGS101]** Artifical Intelligence Basis I</h4>
-				<h4>[AIGS537/CSED537]** Artificial Intelligence & Data Science</h4>
-				*A joint course, **Participating part of the lecture series
+				<h4>[AIGS101]* Artifical Intelligence Basis I</h4>
+				<h4>[AIGS537/CSED537]* Artificial Intelligence & Data Science</h4>
+				*Participating part of the lecture series
 				<h3>2019 Fall</h3>
 				<h4>[CSED703F-01] 3D Vision</h4>
 			</li>
