new students in 2020 fall

--- a/source/lab.html
+++ b/source/lab.html
@@ -22,7 +22,7 @@
 </div>
 <div class="container">
 	<div class="col-lg-12 text-left">
-		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Students</h3>
+		<h3 class="name"> <span class="glyphicon glyphicon-user"></span> Graduate Students</h3>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/junha.jpg" class="img-responsive img-circle img-thumbnail">
 			<h4>Junha Lee</h4>
@@ -53,6 +53,18 @@
 			2020 Spring<br>
 			Master's course<br><br>
 		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/jinoh.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Jin-Oh Cho</h4>
+			2020 Fall<br>
+			Integrated Ph.D. program<br><br>
+		</div>
+		<div class="col-xs-3 text-center">
+			<img src="source/images/seokjun.jpg" class="img-responsive img-circle img-thumbnail">
+			<h4>Seokjun Ahn</h4>
+			2020 Fall<br>
+			Master's course<br><br>
+		</div>
 	</div>
 </div>
 <div class="container">
@@ -60,6 +72,9 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-blackboard"></span> Teaching</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
+				<h3>2020 Fall</h3>
+				<h4>[CSED703F] 3D Vision</h4>
+				<h4>[CSED800] CSE Seminar</h4>
 				<h3>2020 Spring</h3>
 				<h4>[CSED233] Data Structure</h4>
 				<h4>[AIGS101]* Artifical Intelligence Basis I</h4>
