--- a/publications.html
+++ b/publications.html
@@ -118,6 +118,15 @@
 		<p>Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, Jaesik Park, Jihun Yu, Hyunsoo Park<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
+		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-home"></span> Project Page
+		</a>
+		<a href="http://jaesik.info/publications/data/20_cvpr_humbi.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://www.youtube.com/watch?v=1iVjFgYq8ZU" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-play"></span> Video
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -134,6 +143,12 @@
 		<p>Christopher Choy, Junha Lee, Rene Ranftl, Jaesik Park, Vladlen Koltun<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
+		<a href="http://jaesik.info/publications/data/20_cvpr_highconv.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="http://jaesik.info/publications/data/20_cvpr_highconv_supp.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -150,6 +165,12 @@
 		<p>Yue Wu, Rongrong Gao, Jaesik Park, Qifeng Chen<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
+		<a href="http://jaesik.info/publications/data/20_cvpr_future.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://www.youtube.com/watch?v=3zGXWuMLQ5o" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-play"></span> Video
+		</a>
 	</div>
 </div>
 <div class="row" style="height: 30px">
@@ -218,6 +239,9 @@
 		</p>
 		<a href="http://dongwei.info/publications/open3d-gpu.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://www.youtube.com/watch?v=rrkiG4IF1ws" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-play"></span> Video
 		</a>
 	</div>
 </div>
@@ -293,6 +317,9 @@
 		</a>
 		<a href="http://www.open3d.org/paper.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://www.youtube.com/watch?v=qEweHTSEXTk" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-play"></span> Video
 		</a>
 		<a href="https://github.com/IntelVCL/Open3D" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-pencil"></span> Code
@@ -380,6 +407,9 @@
 		</a>
 		<a href="http://jaesik.info/publications/data/17_siggraph.pdf" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="https://www.youtube.com/watch?v=DJnrp05g7vg" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-play"></span> Video
 		</a>
 		<a href="https://github.com/intel-isl/TanksAndTemples" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-pencil"></span> Code
