--- a/lab.html
+++ b/lab.html
@@ -177,18 +177,18 @@
 		<h3 class="name"> <span class="glyphicon glyphicon-piggy-bank"></span> Funding</h3>
 		<ul class="list-group">
 			<li class="list-group-item">
-				<h4>2020.06-2021.03, Gift funds from Microsoft Reserach Asia</h4>
+				<h4>2020.06-2021.03, Grant fund, Microsoft Reserach Asia</h4>
 				- Research on content creation<br>
-				<h4>2020.04-current, Gift funds from Intel Corp., USA</h4>
+				<h4>2020.04-current, Grant fund, Intel Corp., USA</h4>
 				- Research collaboration with Intel ISL<br>
 				- Contribution to Open3D<br>
 				<h4>2020.03-2020.10, ETRI, Republic of Korea</h4>
 				- Developing 3D human capturing system<br>
 				<h4>2020.03-2023.03, Ministry of Science and ICT, Republic of Korea</h4>
 				- 과학기술정보통신부 신진연구자 지원사업<br>
-				<h4>2019.10-2020.10, Gift funds from Qualcomm Corp., USA</h4>
+				<h4>2019.10-2020.10, Grant fund, Qualcomm Corp., USA</h4>
 				- Research on latent feature refinement<br>
-				<h4>2019.04-2022.04, Gift funds from POSTECH, Republic of Korea</h4>
+				<h4>2019.04-2022.04, Grant fund, POSTECH, Republic of Korea</h4>
 				- 포항공과대학교 신임교수 초기정착비<br>
 			</li>
 		</ul>
