--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>HUMBI: A Large Multiview Dataset of Human Body Expressions</h3>
-		<p>Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, Jaesik Park, Jihun Yu, Hyunsoo Park<br>
+		<p>Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, Jaesik Park, Jihun Yu, and Hyunsoo Park<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
 		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
@@ -140,7 +140,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>High-Dimensional Convolutional Networks for Geometric Pattern Recognition</h3>
-		<p>Christopher Choy, Junha Lee, Rene Ranftl, Jaesik Park, Vladlen Koltun<br>
+		<p>Christopher Choy, Junha Lee, Rene Ranftl, Jaesik Park, and Vladlen Koltun<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
 		<a href="http://jaesik.info/publications/data/20_cvpr_highconv.pdf" target="_blank" class="btn btn-default" role="button">
@@ -162,7 +162,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Future Video Synthesis with Object Motion Predictions</h3>
-		<p>Yue Wu, Rongrong Gao, Jaesik Park, Qifeng Chen<br>
+		<p>Yue Wu, Rongrong Gao, Jaesik Park, and Qifeng Chen<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
 		<a href="http://jaesik.info/publications/data/20_cvpr_future.pdf" target="_blank" class="btn btn-default" role="button">
